fix bug with collapsing navbar. Remove leaflet zoom controls on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,3 +112,7 @@ img {
 .draft {
   color: red;
 }
+
+#mainNav .navbar-brand, .navbar-light .navbar-nav .nav-link {
+  color: #e9e9e9;
+}
